[project]
name = "xianyu-bot"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    "langchain==0.2.16",
    "langchain-openai==0.1.22",
    "langchain-community==0.2.16",
    "openai==1.55.3",
    "websockets==15.0",
    "loguru==0.7.2",
    "python-dotenv==1.0.1",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "requests==2.32.3",
    "SQLAlchemy>=2.0,<3.0",          # langchain-community 需要
]

[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"